--- a/.gitignore
+++ b/.gitignore
@@ -104,4 +104,21 @@ dist
 .tern-port
 
 # User Keys
-secrets/*
+secrets/
+
+# Vue
+.DS_Store
+node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/test/unit/coverage/
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
