--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@moefe/vue-aplayer": "^2.0.0-beta.5",
+    "arweave": "^1.9.1",
     "buefy": "^0.9.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
