--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@moefe/vue-aplayer": "^2.0.0-beta.5",
     "arweave": "^1.9.1",
     "buefy": "^0.9.2",
+    "compressorjs": "^1.0.6",
+    "cropperjs": "^1.5.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-upload-component": "^2.8.20",
     "vuetify": "^2.3.10",
     "vuex": "^3.5.1"
   },
