--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@moefe/vue-aplayer": "^2.0.0-beta.5",
     "arweave": "^1.9.1",
+    "axios": "^0.20.0",
     "buefy": "^0.9.2",
     "compressorjs": "^1.0.6",
     "cropperjs": "^1.5.7",
