--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "buefy": "^0.9.2",
     "compressorjs": "^1.0.6",
     "cropperjs": "^1.5.7",
+    "musicgenres-json": "^1.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-upload-component": "^2.8.20",
