:heavy_plus_sign: Added element-ui's notification and message function
Signed-off-by: Ayaka Neko <neko@ayaka.moe>

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "buefy": "^0.9.2",
     "compressorjs": "^1.0.6",
     "cropperjs": "^1.5.7",
-    "musicgenres-json": "^1.0.0",
+    "element-ui": "^2.13.2",
     "hls.js": "^0.14.11",
+    "musicgenres-json": "^1.0.0",
     "vue": "^2.5.2",
     "vue-aplayer": "^1.6.1",
     "vue-router": "^3.0.1",
