📦 Added moment dependency

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cropperjs": "^1.5.7",
     "element-ui": "^2.13.2",
     "hls.js": "^0.14.11",
+    "moment": "^2.27.0",
     "musicgenres-json": "^1.0.0",
     "vue": "^2.5.2",
     "vue-aplayer": "^1.6.1",
