--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "arweave": "^1.9.1",
     "axios": "^0.20.0",
     "buefy": "^0.9.2",
+    "community-js": "1.0.9",
     "compressorjs": "^1.0.6",
     "cropperjs": "^1.5.7",
     "element-ui": "^2.13.2",
