:globe_with_meridians: Added basic localization

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "musicgenres-json": "^1.0.1",
     "vue": "^2.5.2",
     "vue-aplayer": "^1.6.1",
+    "vue-i18n": "^8.22.1",
     "vue-router": "^3.0.1",
     "vue-upload-component": "^2.8.20",
     "vuetify": "^2.3.10",
