--- a/.github/workflows/node.prerelease.deploy.yml
+++ b/.github/workflows/node.prerelease.deploy.yml
@@ -1,8 +1,8 @@
-name: Release Deployment
+name: Pre Release Deployment
 
 on: 
   pull_request:
-    branches: [ release ]
+    branches: [ pre-release ]
 
 jobs:
   build:
@@ -24,4 +24,4 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         envs: ENCRYPT_CODE, ENCRYPT_IV
-        script: cd Git/ArcLight && git pull && rm -rf secrets/encrypt.json && touch secrets/encrypt.json && printf '{"code":"%s", "iv":"%s"}' "$ENCRYPT_CODE" "$ENCRYPT_IV" > secrets/encrypt.json && yarn && yarn build && rm -rf dist/static/js/vendor.*.js.map
+        script: cd Git/ArcLight && git pull && rm -rf secrets/encrypt.json && touch secrets/encrypt.json && printf '{"code":"%s", "iv":"%s"}' "$ENCRYPT_CODE" "$ENCRYPT_IV" > secrets/encrypt.json && yarn && yarn build
