--- a/.github/workflows/node.prerelease.yml
+++ b/.github/workflows/node.prerelease.yml
@@ -1,11 +1,11 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Production CI Build Test
+name: Pre-Release CI Build Test
 
 on:
   pull_request:
-    branches: [ production ]
+    branches: [ pre-release ]
 
 jobs:
   build:
@@ -23,3 +23,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run: npm run build
