:hammer: Use yarn run CI build

--- a/.github/workflows/node.prod.yml
+++ b/.github/workflows/node.prod.yml
@@ -22,5 +22,6 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
-    - run: npm run build
+    - run: npm install -g yarn
+    - run: yarn install --frozen-lockfile
+    - run: yarn build
