--- a/.github/workflows/node.prerelease.yml
+++ b/.github/workflows/node.prerelease.yml
@@ -26,5 +26,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: touch secrets/encrypt.json && printf '{"code":"%s", "iv":"%s"}' "$ENCRYPT_CODE" "$ENCRYPT_IV" > secrets/encrypt.json
-    - run: npm install
-    - run: npm run build
+    - run: npm install -g yarn
+    - run: yarn install --frozen-lockfile
+    - run: yarn build
