--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "less-loader": "^5.0.0",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
+    "svg-sprite-loader": "^5.0.0",
     "vue-cli-plugin-element": "~1.0.1",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11"
