--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "svgo": "svgo -f src/icons/filter --config=src/icons/svgo.yml"
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
@@ -26,6 +27,7 @@
     "moment": "^2.29.1",
     "musicgenres-json": "^1.0.1",
     "roboto-fontface": "*",
+    "svgo": "^1.3.2",
     "vue": "^2.6.11",
     "vue-aplayer": "^1.6.1",
     "vue-i18n": "^8.22.2",
