⚗ 添加了用于身份验证的签名小工具

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-vue": "^7.1.0",
     "hls.js": "^0.14.16",
     "jszip": "^3.5.0",
+    "jwk-to-pem": "^2.0.4",
     "moment": "^2.29.1",
     "musicgenres-json": "^1.0.1",
     "roboto-fontface": "*",
