--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@lemonneko/currency-converter": "^1.0.4",
+    "@limestonefi/api": "^0.1.2",
     "@mdi/font": "^3.6.95",
     "arweave": "^1.10.0",
     "axios": "^0.21.0",
