--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "hls.js": "^0.14.16",
     "jszip": "^3.5.0",
     "moment": "^2.29.1",
-    "musicgenres-json": "^1.0.1",
+    "musicgenres-json": "1.0.2",
     "roboto-fontface": "*",
     "svgo": "^1.3.2",
     "vue": "^2.6.11",
