--- a/.github/workflows/node.prod.deploy.yml
+++ b/.github/workflows/node.prod.deploy.yml
@@ -24,4 +24,4 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
         envs: ENCRYPT_CODE, ENCRYPT_IV
-        script: cd ArcLight && git pull && rm -rf secrets/encrypt.json && touch secrets/encrypt.json && printf '{"code":"%s", "iv":"%s"}' "$ENCRYPT_CODE" "$ENCRYPT_IV" > secrets/encrypt.json && yarn && rm -rf dist && yarn build && rm -rf app && mv -r dist app
+        script: cd ArcLight && git pull && rm -rf secrets/encrypt.json && touch secrets/encrypt.json && printf '{"code":"%s", "iv":"%s"}' "$ENCRYPT_CODE" "$ENCRYPT_IV" > secrets/encrypt.json && yarn && rm -rf dist && yarn build && rm -rf app && mv dist app
